2025-06-19 12:48
- Added unallocated stats visualization near player stats
- Added concurrent workers for faster optimization (thanks to Sakaki Chizuru for the implementation)
- Made page less CPU intensive by pausing animation when universe map is not being shown  

2025-06-15 20:31
- Fixed a bug where total number of stats was larger than available stats
- Updated API import for Space Station 

2025-06-15 19:03
- Adapted coded to new squadron buffs. API import will be fixed in another moment

2025-06-06 16:20
- Corrected bug with Spectres not being imported through API and included available but unused stats in the optimization

2025-06-01 14:25
- Tentative first release of probability calculator. No guarantee of correctness whatsoever.

2025-05-27 09:30
- Introduced interactive zoomable and draggable map of the publicly discovered universe

2025-05-26 20:15
- Optimizer has been reworked once again. Should work for everybody now. If you have troubles obtaining good results, reach out to me. Dragon is not yet included in total credits and experience. 

2025-05-26 09:17
- Introduced tab visaulization and tab "Universe Map"

2025-05-25 16:34
- Included API endpoint for fast player data import

2025-05-25 11:50
- Updates NPC values scaling as per new patch 

2025-05-19 12:58
- Added link to Kontors' resources calculator

2025-05-16 08:14
- Added Squadron boost to income and experience results. Slight differences between simulator and in game log are due to rounding errors

2025-05-15 20:48
- Added resources gathering calculator

2025-05-09 16:32
- It is now possible to select the number of fights for each stat combination being tested in the optimization 

2025-05-08 19:32
- Added local memory for last settings used. Settings should be kept in memory after refreshing

2025-05-05 15:45
- Fixed a bug with experience for higher levels
- Improved the optimizer in the case where number of drones is smaller than 5 

2025-05-04 20:34