@@ -707,8 +707,8 @@
                     function range(start, end) {
                         return Array.from({length: end - start + 1}, (_, i) => i + start);
                     }
-                    const range_htk = range(2, 20);
-                    const range_htd = range(1, 8);
+                    const range_htk = range(3, 16);
+                    const range_htd = range(2, 8);
                     const totalTasks = range_htk.length * range_htd.length;
                     let completedTasks = 0;
                     
@@ -1706,7 +1706,7 @@
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
             const dateStr = "2025-06-19";
-            const timeStr = "12:48";
+            const timeStr = "23:26";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
